--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
       <div class="top-gif"> 
         <img src="./imgs/HII-DMU.gif" style="vertical-align: top; width: 100%;"/>
       </div>
-      
+
+       <section class="jumbotron text-center">
+        <div class="container">
+          <h1 class="jumbotron-heading">Mechanical Engineering Projects Showcase F2024-S2025</h1>
+          <p class="lead text-muted">We are senior students majored in Mechanical Engineering at Houston International Institute, Dalian Maritime University. Welcome to Showcase of Senior Capstone Design! We invite you to spend some time getting to know this year's engineering capstone design projects and teams.</p>
+        </div>
+      </section>
 
       <section class="jumbotron text-center">
         <div class="container">
