--- a/index.html
+++ b/index.html
@@ -59,10 +59,170 @@
        <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Mechanical Engineering Projects Showcase F2024-S2025</h1>
-          <p class="lead text-muted">We are senior students majored in Mechanical Engineering at Houston International Institute, Dalian Maritime University. Welcome to Showcase of Senior Capstone Design! We invite you to spend some time getting to know this year's engineering capstone design projects and teams.</p>
+          <p class="lead text-muted">We are senior students of COHORT 2021, majored in Mechanical Engineering at Houston International Institute, Dalian Maritime University. Welcome to Showcase of Senior Capstone Design! We invite you to spend some time getting to know this year's engineering capstone design projects and teams.</p>
         </div>
       </section>
+      
+       <dt>Group 1 (tbd)</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://hall.dlmu.edu.cn">Link</a></li>            
+            </ul>
+        </dd>
+        <dt>Group 2</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://github.com/1cewood/Blind-Belt/tree/main">Link</a></li>            
+            </ul>
+        </dd>
+        <dt>Group 3</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://yang-wave.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 4</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://cheng-power.github.io/team4.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 5</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://zengjunshu.github.io//">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 6</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://passionbaizi.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 7</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://github.com/Redweff/HD.github.io.git">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 8</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://gubeiyue111.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 9</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://ftang4.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 10</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://saltedfish666666.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 11</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://group-good.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 12</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://colin-dlmu.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 13</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://three-explorer.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 14</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://3va1in.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 15</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://wwyun350.github.io">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 16</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://peakviewinnovators.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 17 (tbd)</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://hall.dlmu.edu.cn/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 18</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://zhk1ng.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 19</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://aeroscouts.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 20</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://DLMU-bro.github.io">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 21</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="http://dundundun12345.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 22</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://tyo1o.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 23 (tbd)</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://hall.dlmu.edu.cn">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 24</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://vibelive.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 25</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://n1a0ge.github.io/">Link</a></li>            
+            </ul>
+        </dd>
+      <dt>Group 26</dt>
+        <dd>
+            <ul>
+                <li>Team Blog Page <a href="https://we11done123.github.io/">Link</a></li>            
+            </ul>
+        </dd>
 
+
+
+      
       <section class="jumbotron text-center">
         <div class="container">
           <h1 class="jumbotron-heading">Mechanical Engineering Projects Showcase F2023-S2024</h1>
