--- a/index.html
+++ b/index.html
@@ -76,7 +76,54 @@
     border-radius: 5px;
 }
 </style>
+  <section class="event-section">
+    <h2>2024.11.25 Lab Training Session</h2>
+    <div class="event-images">
+      <img src="https://s21.ax1x.com/2024/12/10/pAHtEQI.jpg" class="event-image" alt="Lab Training Session Image 1"/>
+      <img src="https://s21.ax1x.com/2024/12/10/pAHtZOP.jpg" class="event-image" alt="Lab Training Session Image 2"/>
+    </div>
+  </section>
 
+  <section class="event-section">
+    <h2>2024.12.02 Design Review Presentation</h2>
+    <div class="event-images">
+      <img src="https://s21.ax1x.com/2024/12/10/pAHtmef.jpg" class="event-image" alt="Design Review Presentation Image 1"/>
+      <img src="https://s21.ax1x.com/2024/12/10/pAHtnw8.jpg" class="event-image" alt="Design Review Presentation Image 2"/>
+    </div>
+  </section>
+
+  <section class="event-section">
+    <h2>2024.12.09 Capstone Design Timeline Overview for DMU&UH Tasks</h2>
+    <div class="event-images">
+      <img src="https://s21.ax1x.com/2024/12/10/pAHtWkD.jpg" class="event-image" alt="Capstone Design Timeline Image 1"/>
+      <img src="https://s21.ax1x.com/2024/12/10/pAHtHnP.jpg" class="event-image" alt="Capstone Design Timeline Image 2"/>
+    </div>
+  </section>
+
+  <style>
+    .event-section {
+      margin: 20px 0;
+      text-align: center;
+    }
+
+    .event-images {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .event-image {
+      width: 45%; /* Adjust width for scaling */
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      font-family: 'Arial', sans-serif;
+      color: #333;
+      margin-bottom: 10px;
+    }
+  </style>
 <div class="group-container">
     <div class="group-item">
         <dt>Group 1 (tbd)</dt>
