--- a/index.html
+++ b/index.html
@@ -208,6 +208,18 @@
       margin-bottom: 10px;
     }
   </style>
+
+.group-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.group-item {
+    width: 30%; /* Adjusts the width of each group item */
+    box-sizing: border-box; /* Ensures padding and border are included in the total width */
+    margin: 1%; /* Adds some space between items */
+}
+    
 <div class="group-container">
     <div class="group-item">
         <dt>Group 1 (tbd)</dt>
